Implement Feedback and Refactoring